# lib/matchService_web/views/match_view.ex
@@ -1,0 +1,23 @@
+defmodule MatchServiceWeb.MatchView do
+  use MatchServiceWeb, :view
+  alias MatchServiceWeb.MatchView
+
+  def render("index.json", %{matches: matches}) do
+    %{data: render_many(matches, MatchView, "match.json")}
+  end
+
+  def render("show.json", %{match: match}) do
+    %{data: render_one(match, MatchView, "match.json")}
+  end
+
+  def render("match.json", %{match: match}) do
+    %{id: match.id,
+      court_id: match.court_id,
+      date: match.date,
+      played: match.played,
+      team_home_id: match.team_home_id,
+      team_away_id: match.team_away_id,
+      score_home: match.score_home,
+      score_away: match.score_away}
+  end
+end
